--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       🚀 Join WorkWave Now
     </a>
 
-    <img src="27836C96-CE30-40BF-8202-783BB77E47DA.png" alt="WorkWave Flyer">
+  <img src="workwave.JPG" alt="WorkWave Banner" style="max-width:100%;">
   </div>
 
   <!-- Features Section -->
